--- a/tRestApi2firebase/app/src/main/res/layout/activity_main.xml
+++ b/tRestApi2firebase/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
@@ -18,7 +18,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
         -->
-
+<!--
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,29 +44,24 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.core.widget.NestedScrollView>
-
-<!--
-    <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp">
-
-        <TextView
-            android:id = "@+id/text_view_result"
-            android:layout_width = "match_parent"
-            android:layout_height = "match_parent"/>
-    </androidx.cardview.widget.CardView>
 -->
-    <!--
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#010"
         android:padding="4dp"
-        android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
-        -->
-</RelativeLayout>
+        android:scrollbars="vertical"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/create_yellow" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
